PiHole-Wireguard/04-pihole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-cors@kubernetescrd,default-redirectscheme@kubernetescrd
spec:
  rules:
    - host: k3s.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-ui-svc
                port:
                  number: 80
